[gd_scene load_steps=2 format=2]

[ext_resource path="res://Games/CardsAgainstHumanity/Config.gd" type="Script" id=1]

[node name="Config" type="Node2D"]

script = ExtResource( 1 )

[node name="Container" type="VBoxContainer" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 395.0
margin_bottom = 126.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 25
alignment = 1
_sections_unfolded = [ "Margin", "Rect", "custom_constants" ]

[node name="Description" type="Label" parent="Container" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 395.0
margin_bottom = 14.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Hover over items for more info!"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Rect", "custom_fonts" ]

[node name="Button" type="Button" parent="Container" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 39.0
margin_right = 395.0
margin_bottom = 59.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Start the game"
flat = false
align = 1

[node name="GameStyle" type="Label" parent="Container" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 84.0
margin_right = 395.0
margin_bottom = 98.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Game Style: "
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Rect", "custom_fonts" ]

[node name="Options" type="OptionButton" parent="Container/GameStyle" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 88.0
margin_top = -5.0
margin_right = 186.0
margin_bottom = 15.0
rect_pivot_offset = Vector2( 0, 0 )
hint_tooltip = "Game Style to be played

Card Czar - Players take turns being the host of the black card and this player determines who wins.
God Is Dead - Every turn the system hosts black card and players vote on which is the funniest. One with the highest vote wins."
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
disabled = true
toggle_mode = false
action_mode = 0
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 0
selected = -1
items = [  ]
_sections_unfolded = [ "Hint" ]

[node name="PointsRequired" type="Label" parent="Container" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 123.0
margin_right = 395.0
margin_bottom = 137.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Points Required: "
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Rect", "custom_fonts" ]

[node name="SpinBox" type="SpinBox" parent="Container/PointsRequired" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 122.0
margin_top = -7.0
margin_right = 196.0
margin_bottom = 17.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 3.0
max_value = 50.0
step = 1.0
page = 0.0
value = 10.0
exp_edit = false
rounded = false
editable = false
prefix = ""
suffix = ""

[node name="Label_Expansions" type="Label" parent="Container" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 162.0
margin_right = 395.0
margin_bottom = 176.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 2, 2 )
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Select Expansions"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Rect", "custom_fonts" ]

[node name="Expansions" type="GridContainer" parent="Container" index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 201.0
margin_right = 395.0
margin_bottom = 201.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
columns = 4

[connection signal="pressed" from="Container/Button" to="." method="_on_Button_pressed"]

[connection signal="item_selected" from="Container/GameStyle/Options" to="." method="_on_Options_item_selected"]

[connection signal="value_changed" from="Container/PointsRequired/SpinBox" to="." method="_on_SpinBox_value_changed"]


